Fix club card display on mobile

--- a/client/src/components/ClubCard.scss
+++ b/client/src/components/ClubCard.scss
@@ -92,7 +92,7 @@
 .club-card-icons {
     display: flex;
     position: fixed;
-    bottom: 0.75rem;
+    bottom: 0.5rem;
     left: 50%;
     transform: translate(-50%, 0);
     flex-direction: row;
@@ -132,4 +132,41 @@
 
 .web-icon:hover > path {
     stroke: $primary;
+}
+
+/*
+ * #########################
+ * ##### MEDIA QUERIES #####
+ * #########################
+ */
+
+@include media-phone-down {
+    .club-card {
+        height: 6rem;
+        width: 6rem;
+    }
+
+    // This will still be at a 3.5:8 ratio
+    .club-card-image-container {
+        height: 2.625rem;
+    }
+
+    .club-card-type {
+        font-size: 0.45rem;
+    }
+
+    .club-card-name {
+        font-size: 0.5rem;
+    }
+
+    .club-card-icons {
+        bottom: 0.25rem;
+    }
+
+    .web-icon,
+    .fb-icon {
+        width: 0.75rem;
+        height: 0.75rem;
+        margin-right: 0 0.25rem;
+    }
 }
